--- a/index.html
+++ b/index.html
@@ -6,64 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>bookshelf</title>
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="felexbox">
         <div class="sidebarl">
-            <a href="">book</a>
-            <a href="">edit bookshelf</a>
-            <a href="">your categories</a>
+            <ul>
+                <li><a href="index.html">start</a></li>
+                <li><a href="">book</a></li>
+                <li><a href="">edit bookshelf</a></li>
+                <li><a href="">your categories</a></li>
+            </ul>
         </div>
         <div class="middle">
             <h1>your bookshelf</h1>
             <table class="shelf">
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie" hr></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie"></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie"></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie"></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie"></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
+                    <td><button class="categorie"></button></td>
+                    <td><button class="categorie"></button></td>
                 </tr>
             </table>
         </div>
         <div class="sidebarr">
-            <div >
-                <button class="dropdown">
+            <a class="pic" href="profile.html">
+                <img src="user.png" alt="user icon" height="30">
+            </a>
+            <div class="dropdown">
+                <button onclick="drop()" class="dropbtn">
                     <img src="down-arrow.png" alt="dropdown arrow" height="30">
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                <a href="#">
-                    <img src="book.png" alt="book" height="25">
-                </a>
-                <a href="#">
-                    <img src="people.png" alt="friends" height="25">
-                </a>
-                <a href="#">
-                    <img src="setting.png" alt="settings" height="25">
-                </a>
-                <a href="#">
-                    <img src="logout.png" alt="logout" height="20">
-                </a>
+                    <a href="books.html">
+                        <img src="book.png" alt="book" height="25">
+                    </a>
+                    <a href="#">
+                        <img src="people.png" alt="friends" height="25">
+                    </a>
+                    <a href="#">
+                        <img src="setting.png" alt="settings" height="25">
+                    </a>
+                    <a href="#">
+                        <img src="logout.png" alt="logout" height="20">
+                    </a>
                 </div>
             </div>
-            <img src="user.png" alt="user icon" height="30">
         </div>
     </div>
 
