--- a/profile/profile.html
+++ b/profile/profile.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>profile</title>
 </head>
 <body>
     <div class="felexbox">
         <div class="sidebarl">
             <ul>
-                <li><a href="index.html">start</a></li>
+                <li><a href="/shelf/index.html">start</a></li>
                 <li><a href="">book</a></li>
                 <li><a href="">edit bookshelf</a></li>
                 <li><a href="">your categories</a></li>
@@ -19,28 +19,28 @@
         </div>
         <div class="middle">
             <h1>your profile</h1>
-            <img class="picture" src="user.png" alt="profile pic" height="120">
+            <img class="picture" src="/images/user.png" alt="profile pic" height="120">
         </div>
         <div class="sidebarr">
             <a class="pic" href="profile.html">
-                <img src="user.png" alt="user icon" height="30">
+                <img src="/images/user.png" alt="user icon" height="30">
             </a>
             <div class="dropdown">
                 <button class="dropbtn">
-                    <img src="down-arrow.png" alt="dropdown arrow" height="30">
+                    <img src="/images/down-arrow.png" alt="dropdown arrow" height="30">
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                <a href="books.html">
-                    <img src="book.png" alt="book" height="25">
+                <a href="/books/books.html">
+                    <img src="/images/book.png" alt="book" height="25">
                 </a>
                 <a href="#">
-                    <img src="people.png" alt="friends" height="25">
+                    <img src="/images/people.png" alt="friends" height="25">
                 </a>
                 <a href="#">
-                    <img src="setting.png" alt="settings" height="25">
+                    <img src="/images/setting.png" alt="settings" height="25">
                 </a>
                 <a href="#">
-                    <img src="logout.png" alt="logout" height="20">
+                    <img src="/images/logout.png" alt="logout" height="20">
                 </a>
                 </div>
             </div>
